<?xml version="1.0" encoding="utf-8"?>

    <!--
        NAMA                : NOERKHALIDAH MISKIYAH
        KELAS / NIM         : IF-2 / 10118077
        DESKRIPSI           : MEMBUAT PROJECT APLIKASI MONITORY
        TANGGAL PENGERJAAN  : 3 MEI 2021
    -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">


    <TextView
        android:id="@+id/textView"
        android:layout_width="430dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/nunito_bold"
        android:paddingStart="40dp"
        android:text="@string/kode_keluarga"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/ketikkan_kode_keluarga_yang_ayah_bunda_miliki_disini"
        android:textSize="18sp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp" />

    <EditText
        android:id="@+id/button"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/button_transparent"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/a1b2c3"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/ketentuan"
        android:textAlignment="center"
        android:textSize="12sp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:background="@drawable/button_yellow"
        android:fontFamily="@font/nunito_bold"
        android:onClick="tobiodata"
        android:text="Masuk"
        android:textSize="14sp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/nunito_bold"
        android:text="Belum punya kode keluarga?"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="450dp"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_blue"
        android:fontFamily="@font/nunito_bold"
        android:text="Beli Kode Keluarga Disini"
        android:layout_marginTop="500dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:textColor="@color/white"
        android:textSize="14sp" />


</RelativeLayout>
